--- a/src/layouts/Breadcrumbs.astro
+++ b/src/layouts/Breadcrumbs.astro
@@ -21,7 +21,7 @@ const { props } = Astro;
 
 <BreadcrumbNav />
 
-<div class="max-w-screen-lg mx-auto w-full px-4 box-border">
+<div class="max-w-5xl mx-auto w-full px-4 box-border">
   {
     props.pageTitle ? (
       "titleTransition" in props && Array.isArray(props.pageTitle) ? (
