--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -9,7 +9,7 @@ import Header from "@components/Header.astro";
   <Header activeNav="search" />
   <Breadcrumbs pageTitle="Search" pageDesc="Search all posts...">
     <div class="w-full">
-      <div class="w-full mx-auto max-w-[64rem]">
+      <div class="w-full mx-auto max-w-5xl">
         <div
           class="flex flex-nowrap items-center gap-3 py-3 px-5 rounded-md border-2 border-skin-line bg-skin-card focus-within:border-skin-accent transition-colors"
         >
